--- a/Text Classification/text_classification_CNN.ipynb
+++ b/Text Classification/text_classification_CNN.ipynb
@@ -67,7 +67,7 @@
         "TSV_DIR = \"/content/drive/My Drive/Text Classification/Testground/data/imdb/labeledTrainData.tsv\"\n",
         "GLOVE_DIR = \"/content/drive/My Drive/Text Classification/Testground/data/glove/\""
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,14 +134,14 @@
         "  return cleaned_str.decode('utf-8')\n",
         "\n",
         "def create_simplified_cnn_network(filter, activate_function=\"relu\"):\n",
-        "  l_cov1= Conv1D(128, 5, activation='relu')(filter)\n",
+        "  l_cov1= Conv1D(128, 5, activation=activate_function)(filter)\n",
         "  l_pool1 = MaxPooling1D(5)(l_cov1)\n",
-        "  l_cov2 = Conv1D(128, 5, activation='relu')(l_pool1)\n",
+        "  l_cov2 = Conv1D(128, 5, activation=activate_function)(l_pool1)\n",
         "  l_pool2 = MaxPooling1D(5)(l_cov2)\n",
-        "  l_cov3 = Conv1D(128, 5, activation='relu')(l_pool2)\n",
+        "  l_cov3 = Conv1D(128, 5, activation=activate_function)(l_pool2)\n",
         "  l_pool3 = MaxPooling1D(35)(l_cov3)  # global max pooling\n",
         "  l_flat = Flatten()(l_pool3)\n",
-        "  l_dense = Dense(128, activation='relu')(l_flat)\n",
+        "  l_dense = Dense(128, activation=activate_function)(l_flat)\n",
         "  preds = Dense(2, activation='softmax')(l_dense)\n",
         "\n",
         "  model = Model(sequence_input, preds)\n",
@@ -152,12 +152,12 @@
         "\n",
         "def create_deeper_cnn_network(filter, activate_function=\"relu\"):\n",
         "  l_concatenate = concatenate(filter, axis=1)\n",
-        "  l_cov1= Conv1D(128, 5, activation='relu')(l_concatenate)\n",
+        "  l_cov1= Conv1D(128, 5, activation=activate_function)(l_concatenate)\n",
         "  l_pool1 = MaxPooling1D(5)(l_cov1)\n",
-        "  l_cov2 = Conv1D(128, 5, activation='relu')(l_pool1)\n",
+        "  l_cov2 = Conv1D(128, 5, activation=activate_function)(l_pool1)\n",
         "  l_pool2 = MaxPooling1D(30)(l_cov2)\n",
         "  l_flat = Flatten()(l_pool2)\n",
-        "  l_dense = Dense(128, activation='relu')(l_flat)\n",
+        "  l_dense = Dense(128, activation=activate_function)(l_flat)\n",
         "  preds = Dense(2, activation='softmax')(l_dense)\n",
         "\n",
         "  model = Model(sequence_input, preds)\n",
@@ -184,11 +184,7 @@
       "metadata": {
         "id": "lYnxG_OZDGPL",
         "colab_type": "code",
-        "outputId": "db1f3b71-e87c-4418-d878-3f94c8c5c20d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
-        }
+        "colab": {}
       },
       "source": [
         "data_train = get_train_data(TSV_DIR)\n",
@@ -259,20 +255,8 @@
         "\n",
         "print(\"...Data is ready to train\")"
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Found 80566 unique tokens.\n",
-            "Shape of data tensor: (25000, 1000)\n",
-            "Shape of label tensor: (25000, 2)\n",
-            "Total 400000 word vectors in Glove 6B 100d.\n",
-            "...Data is ready to train\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -318,11 +302,7 @@
       "metadata": {
         "id": "elQGgPUdrqpP",
         "colab_type": "code",
-        "outputId": "c447d961-8b52-485e-b509-5b10270fb4cf",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 799
-        }
+        "colab": {}
       },
       "source": [
         "# applying a more complex convolutional approach\n",
@@ -342,60 +322,7 @@
         "          epochs=20, batch_size=50)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Model fitting - more complex convolutional neural network\n",
-            "Model: \"model_5\"\n",
-            "__________________________________________________________________________________________________\n",
-            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-            "==================================================================================================\n",
-            "input_2 (InputLayer)            (None, 1000)         0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "embedding_2 (Embedding)         (None, 1000, 100)    8056700     input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "conv1d_30 (Conv1D)              (None, 998, 128)     38528       embedding_2[0][0]                \n",
-            "__________________________________________________________________________________________________\n",
-            "conv1d_31 (Conv1D)              (None, 997, 128)     51328       embedding_2[0][0]                \n",
-            "__________________________________________________________________________________________________\n",
-            "conv1d_32 (Conv1D)              (None, 996, 128)     64128       embedding_2[0][0]                \n",
-            "__________________________________________________________________________________________________\n",
-            "max_pooling1d_30 (MaxPooling1D) (None, 199, 128)     0           conv1d_30[0][0]                  \n",
-            "__________________________________________________________________________________________________\n",
-            "max_pooling1d_31 (MaxPooling1D) (None, 199, 128)     0           conv1d_31[0][0]                  \n",
-            "__________________________________________________________________________________________________\n",
-            "max_pooling1d_32 (MaxPooling1D) (None, 199, 128)     0           conv1d_32[0][0]                  \n",
-            "__________________________________________________________________________________________________\n",
-            "concatenate_2 (Concatenate)     (None, 597, 128)     0           max_pooling1d_30[0][0]           \n",
-            "                                                                 max_pooling1d_31[0][0]           \n",
-            "                                                                 max_pooling1d_32[0][0]           \n",
-            "__________________________________________________________________________________________________\n",
-            "conv1d_33 (Conv1D)              (None, 593, 128)     82048       concatenate_2[0][0]              \n",
-            "__________________________________________________________________________________________________\n",
-            "max_pooling1d_33 (MaxPooling1D) (None, 118, 128)     0           conv1d_33[0][0]                  \n",
-            "__________________________________________________________________________________________________\n",
-            "conv1d_34 (Conv1D)              (None, 114, 128)     82048       max_pooling1d_33[0][0]           \n",
-            "__________________________________________________________________________________________________\n",
-            "max_pooling1d_34 (MaxPooling1D) (None, 3, 128)       0           conv1d_34[0][0]                  \n",
-            "__________________________________________________________________________________________________\n",
-            "flatten_5 (Flatten)             (None, 384)          0           max_pooling1d_34[0][0]           \n",
-            "__________________________________________________________________________________________________\n",
-            "dense_9 (Dense)                 (None, 128)          49280       flatten_5[0][0]                  \n",
-            "__________________________________________________________________________________________________\n",
-            "dense_10 (Dense)                (None, 2)            258         dense_9[0][0]                    \n",
-            "==================================================================================================\n",
-            "Total params: 8,424,318\n",
-            "Trainable params: 8,424,318\n",
-            "Non-trainable params: 0\n",
-            "__________________________________________________________________________________________________\n",
-            "Train on 20000 samples, validate on 5000 samples\n",
-            "Epoch 1/20\n",
-            " 7300/20000 [=========>....................] - ETA: 16:58 - loss: 0.7180 - acc: 0.5419"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
